[package]
name = "raves_xmltree"
version = "0.11.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
description = "Parse an XML file into a simple tree-like structure"
repository = "https://github.com/raves-project/raves_xmltree"
keywords = ["xml", "parse", "xmltree"]
license = "MIT"
readme = "README.md"
categories = ["parsing", "data-structures"]
edition = "2021"

[dependencies]
xml-rs = "0.8"
indexmap = { version = "2", optional = true }

[features]
default = []
attribute-order = ["indexmap"]
attribute-sorted = []
